--- a/.gitmodules
+++ b/.gitmodules
@@ -1,87 +1,84 @@
-[submodule "plugins/vim/delimitmate"]
-	path = plugins/vim/delimitmate
-	url = https://github.com/raimondi/delimitmate
-[submodule "plugins/vim/fzf.vim"]
-	path = plugins/vim/fzf.vim
-	url = https://github.com/junegunn/fzf.vim
-[submodule "plugins/vim/html5.vim"]
-	path = plugins/vim/html5.vim
-	url = https://github.com/othree/html5.vim
-[submodule "plugins/vim/indentline"]
-	path = plugins/vim/indentline
-	url = https://github.com/yggdroot/indentline
-[submodule "plugins/vim/nord-vim"]
-	path = plugins/vim/nord-vim
-	url = https://github.com/arcticicestudio/nord-vim
-[submodule "plugins/vim/php.vim"]
-	path = plugins/vim/php.vim
-	url = https://github.com/stanangeloff/php.vim
-[submodule "plugins/vim/ultisnips"]
-	path = plugins/vim/ultisnips
-	url = https://github.com/sirver/ultisnips
-[submodule "plugins/vim/vim-blade"]
-	path = plugins/vim/vim-blade
-	url = https://github.com/jwalton512/vim-blade
-[submodule "plugins/vim/vim-commentary"]
-	path = plugins/vim/vim-commentary
-	url = https://github.com/tpope/vim-commentary
-[submodule "plugins/vim/vim-context-commentstring"]
-	path = plugins/vim/vim-context-commentstring
-	url = https://github.com/suy/vim-context-commentstring
-[submodule "plugins/vim/vim-easy-align"]
-	path = plugins/vim/vim-easy-align
-	url = https://github.com/junegunn/vim-easy-align
-[submodule "plugins/vim/vim-endwise"]
-	path = plugins/vim/vim-endwise
-	url = https://github.com/tpope/vim-endwise
-[submodule "plugins/vim/vim-eunuch"]
-	path = plugins/vim/vim-eunuch
-	url = https://github.com/tpope/vim-eunuch
-[submodule "plugins/vim/vim-fugitive"]
-	path = plugins/vim/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive
-[submodule "plugins/vim/vim-gitgutter"]
-	path = plugins/vim/vim-gitgutter
-	url = https://github.com/airblade/vim-gitgutter
-[submodule "plugins/vim/vim-gutentags"]
-	path = plugins/vim/vim-gutentags
-	url = https://github.com/ludovicchabant/vim-gutentags
-[submodule "plugins/vim/vim-indent-object"]
-	path = plugins/vim/vim-indent-object
-	url = https://github.com/michaeljsmith/vim-indent-object
-[submodule "plugins/vim/vim-javascript"]
-	path = plugins/vim/vim-javascript
-	url = https://github.com/pangloss/vim-javascript
-[submodule "plugins/vim/vim-repeat"]
-	path = plugins/vim/vim-repeat
-	url = https://github.com/tpope/vim-repeat
-[submodule "plugins/vim/vim-sh-indent"]
-	path = plugins/vim/vim-sh-indent
-	url = https://github.com/chrisbra/vim-sh-indent
-[submodule "plugins/vim/vim-surround"]
-	path = plugins/vim/vim-surround
-	url = https://github.com/tpope/vim-surround
-[submodule "plugins/vim/vim-tmux-navigator"]
-	path = plugins/vim/vim-tmux-navigator
-	url = https://github.com/christoomey/vim-tmux-navigator
-[submodule "plugins/vim/vim-vinegar"]
-	path = plugins/vim/vim-vinegar
-	url = https://github.com/tpope/vim-vinegar
-[submodule "plugins/vim/vim-vue"]
-	path = plugins/vim/vim-vue
-	url = https://github.com/posva/vim-vue
-[submodule "plugins/zsh/fzf"]
-	path = plugins/zsh/fzf
-	url = https://github.com/junegunn/fzf
-[submodule "plugins/zsh/zsh-autosuggestions"]
-	path = plugins/zsh/zsh-autosuggestions
-	url = https://github.com/zsh-users/zsh-autosuggestions
-[submodule "plugins/zsh/zsh-completions"]
-	path = plugins/zsh/zsh-completions
-	url = https://github.com/zsh-users/zsh-completions
-[submodule "plugins/zsh/zsh-history-substring-search"]
-	path = plugins/zsh/zsh-history-substring-search
-	url = https://github.com/zsh-users/zsh-history-substring-search
-[submodule "plugins/zsh/zsh-syntax-highlighting"]
-	path = plugins/zsh/zsh-syntax-highlighting
-	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "zsh/plugins/zsh-autosuggestions"]
+	path = zsh/plugins/zsh-autosuggestions
+	url = http://github.com/zsh-users/zsh-autosuggestions
+[submodule "zsh/plugins/zsh-completions"]
+	path = zsh/plugins/zsh-completions
+	url = http://github.com/zsh-users/zsh-completions
+[submodule "zsh/plugins/zsh-history-substring-search"]
+	path = zsh/plugins/zsh-history-substring-search
+	url = http://github.com/zsh-users/zsh-history-substring-search
+[submodule "zsh/plugins/zsh-syntax-highlighting"]
+	path = zsh/plugins/zsh-syntax-highlighting
+	url = http://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "zsh/plugins/fzf"]
+	path = zsh/plugins/fzf
+	url = http://github.com/junegunn/fzf
+[submodule "vim/plugins/delimitmate"]
+	path = vim/plugins/delimitmate
+	url = http://github.com/raimondi/delimitmate
+[submodule "vim/plugins/fzf"]
+	path = vim/plugins/fzf
+	url = http://github.com/junegunn/fzf
+[submodule "vim/plugins/html5.vim"]
+	path = vim/plugins/html5.vim
+	url = http://github.com/othree/html5.vim
+[submodule "vim/plugins/indentline"]
+	path = vim/plugins/indentline
+	url = http://github.com/yggdroot/indentline
+[submodule "vim/plugins/nord-vim"]
+	path = vim/plugins/nord-vim
+	url = http://github.com/arcticicestudio/nord-vim
+[submodule "vim/plugins/php.vim"]
+	path = vim/plugins/php.vim
+	url = http://github.com/stanangeloff/php.vim
+[submodule "vim/plugins/ultisnips"]
+	path = vim/plugins/ultisnips
+	url = http://github.com/sirver/ultisnips
+[submodule "vim/plugins/vim-blade"]
+	path = vim/plugins/vim-blade
+	url = http://github.com/jwalton512/vim-blade
+[submodule "vim/plugins/vim-commentary"]
+	path = vim/plugins/vim-commentary
+	url = http://github.com/tpope/vim-commentary
+[submodule "vim/plugins/vim-context-commentstring"]
+	path = vim/plugins/vim-context-commentstring
+	url = http://github.com/suy/vim-context-commentstring
+[submodule "vim/plugins/vim-easy-align"]
+	path = vim/plugins/vim-easy-align
+	url = http://github.com/junegunn/vim-easy-align
+[submodule "vim/plugins/vim-endwise"]
+	path = vim/plugins/vim-endwise
+	url = http://github.com/tpope/vim-endwise
+[submodule "vim/plugins/vim-eunuch"]
+	path = vim/plugins/vim-eunuch
+	url = http://github.com/tpope/vim-eunuch
+[submodule "vim/plugins/vim-fugitive"]
+	path = vim/plugins/vim-fugitive
+	url = http://github.com/tpope/vim-fugitive
+[submodule "vim/plugins/vim-gutentags"]
+	path = vim/plugins/vim-gutentags
+	url = http://github.com/ludovicchabant/vim-gutentags
+[submodule "vim/plugins/vim-indent-object"]
+	path = vim/plugins/vim-indent-object
+	url = http://github.com/michaeljsmith/vim-indent-object
+[submodule "vim/plugins/vim-javascript"]
+	path = vim/plugins/vim-javascript
+	url = http://github.com/pangloss/vim-javascript
+[submodule "vim/plugins/vim-repeat"]
+	path = vim/plugins/vim-repeat
+	url = http://github.com/tpope/vim-repeat
+[submodule "vim/plugins/vim-sh-indent"]
+	path = vim/plugins/vim-sh-indent
+	url = http://github.com/chrisbra/vim-sh-indent
+[submodule "vim/plugins/vim-surround"]
+	path = vim/plugins/vim-surround
+	url = http://github.com/tpope/vim-surround
+[submodule "vim/plugins/vim-tmux-navigator"]
+	path = vim/plugins/vim-tmux-navigator
+	url = http://github.com/christoomey/vim-tmux-navigator
+[submodule "vim/plugins/vim-vinegar"]
+	path = vim/plugins/vim-vinegar
+	url = http://github.com/tpope/vim-vinegar
+[submodule "vim/plugins/vim-vue"]
+	path = vim/plugins/vim-vue
+	url = http://github.com/posva/vim-vue
